(ADD) favicon; (ADD) footer links

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mindscape Chronicles</title>
   <script type="module" src="./js/index.js" defer></script>
-  <link rel="stylesheet" href="./css/main.css">
+  <!--link rel="stylesheet" href="./css/main.css"-->
+  <link rel="stylesheet" href="../live-sass/css/main.css">
   <!-- FAVICON -->
-  <link rel="icon" type="image/x-icon" src="../components/favicon.ico" />
+  <link rel="icon" type="image/x-icon" src="../components/social/favicon.ico" />
 
   <!-- FONT -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
