--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <!--link rel="stylesheet" href="./css/main.css"-->
   <link rel="stylesheet" href="../live-sass/css/main.css">
   <!-- FAVICON -->
-  <link rel="icon" type="image/x-icon" src="../components/social/favicon.ico" />
+  <link rel="icon" type="image/jpg" href="./components/favicon.ico" />
 
   <!-- FONT -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
